Matriz de adjacencia

--- a/1Ativ.ipynb
+++ b/1Ativ.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "1Ativ.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPmFfm3ocPqtDABdjtGNPqT",
+      "authorship_tag": "ABX9TyM2hgqCCWHkLJqJ5N2Asf3i",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -72,11 +72,9 @@
       "source": [
         "import numpy as np\n",
         "import igraph as ig\n",
-        "from igraph import *\n",
-        "import matplotlib as mpl\n",
-        "import matplotlib.pyplot as plt"
+        "from igraph import *"
       ],
-      "execution_count": 2,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -114,14 +112,14 @@
         "\n",
         "  return grafo, arestas"
       ],
-      "execution_count": 3,
+      "execution_count": 28,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "z1FONUR2esNi",
-        "outputId": "5cc07363-d430-4e7d-ea04-c777fb153143",
+        "outputId": "7f9d55b0-a290-4146-93ab-c9c807c8cd66",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 107
@@ -133,7 +131,7 @@
         "print(grafo)\n",
         "print(arestas)"
       ],
-      "execution_count": 4,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -161,7 +159,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "SW02INzi7rk2",
-        "outputId": "50f02a5f-c9f2-4ab4-d03a-f66ea895ab3e",
+        "outputId": "04fff472-5423-4517-fb90-926393967956",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 820
@@ -172,15 +170,15 @@
         "\n",
         "plot(grafo, layout = layout)\n"
       ],
-      "execution_count": 5,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<igraph.drawing.Plot at 0x7fea07964978>"
+              "<igraph.drawing.Plot at 0x7fea07864e48>"
             ],
-            "image/svg+xml": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"600pt\" height=\"600pt\" viewBox=\"0 0 600 600\" version=\"1.1\">\n<g id=\"surface2\">\n<rect x=\"0\" y=\"0\" width=\"600\" height=\"600\" style=\"fill:rgb(100%,100%,100%);fill-opacity:1;stroke:none;\"/>\n<path style=\"fill:none;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(26.666667%,26.666667%,26.666667%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 580 418.035156 L 336.042969 580 \"/>\n<path style=\"fill:none;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(26.666667%,26.666667%,26.666667%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 580 418.035156 L 253.113281 331.679688 \"/>\n<path style=\"fill:none;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(26.666667%,26.666667%,26.666667%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 580 418.035156 L 572.925781 118.550781 \"/>\n<path style=\"fill:none;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(26.666667%,26.666667%,26.666667%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 336.042969 580 L 27.070312 481.449219 \"/>\n<path style=\"fill:none;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(26.666667%,26.666667%,26.666667%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 336.042969 580 L 346.882812 268.320312 \"/>\n<path style=\"fill:none;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(26.666667%,26.666667%,26.666667%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 253.113281 331.679688 L 27.070312 481.449219 \"/>\n<path style=\"fill:none;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(26.666667%,26.666667%,26.666667%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 253.113281 331.679688 L 263.953125 20 \"/>\n<path style=\"fill:none;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(26.666667%,26.666667%,26.666667%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 27.070312 481.449219 L 20 181.960938 \"/>\n<path style=\"fill:none;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(26.666667%,26.666667%,26.666667%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 572.925781 118.550781 L 346.882812 268.320312 \"/>\n<path style=\"fill:none;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(26.666667%,26.666667%,26.666667%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 572.925781 118.550781 L 263.953125 20 \"/>\n<path style=\"fill:none;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(26.666667%,26.666667%,26.666667%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 346.882812 268.320312 L 20 181.960938 \"/>\n<path style=\"fill:none;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(26.666667%,26.666667%,26.666667%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 263.953125 20 L 20 181.960938 \"/>\n<path style=\"fill-rule:nonzero;fill:rgb(100%,0%,0%);fill-opacity:1;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 590 418.035156 C 590 423.558594 585.523438 428.035156 580 428.035156 C 574.476562 428.035156 570 423.558594 570 418.035156 C 570 412.511719 574.476562 408.035156 580 408.035156 C 585.523438 408.035156 590 412.511719 590 418.035156 \"/>\n<path style=\"fill-rule:nonzero;fill:rgb(100%,0%,0%);fill-opacity:1;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 346.042969 580 C 346.042969 585.523438 341.566406 590 336.042969 590 C 330.519531 590 326.042969 585.523438 326.042969 580 C 326.042969 574.476562 330.519531 570 336.042969 570 C 341.566406 570 346.042969 574.476562 346.042969 580 \"/>\n<path style=\"fill-rule:nonzero;fill:rgb(100%,0%,0%);fill-opacity:1;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 263.113281 331.679688 C 263.113281 337.203125 258.636719 341.679688 253.113281 341.679688 C 247.59375 341.679688 243.113281 337.203125 243.113281 331.679688 C 243.113281 326.15625 247.59375 321.679688 253.113281 321.679688 C 258.636719 321.679688 263.113281 326.15625 263.113281 331.679688 \"/>\n<path style=\"fill-rule:nonzero;fill:rgb(100%,0%,0%);fill-opacity:1;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 37.070312 481.449219 C 37.070312 486.96875 32.59375 491.449219 27.070312 491.449219 C 21.546875 491.449219 17.070312 486.96875 17.070312 481.449219 C 17.070312 475.925781 21.546875 471.449219 27.070312 471.449219 C 32.59375 471.449219 37.070312 475.925781 37.070312 481.449219 \"/>\n<path style=\"fill-rule:nonzero;fill:rgb(100%,0%,0%);fill-opacity:1;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 582.925781 118.550781 C 582.925781 124.074219 578.449219 128.550781 572.925781 128.550781 C 567.402344 128.550781 562.925781 124.074219 562.925781 118.550781 C 562.925781 113.027344 567.402344 108.550781 572.925781 108.550781 C 578.449219 108.550781 582.925781 113.027344 582.925781 118.550781 \"/>\n<path style=\"fill-rule:nonzero;fill:rgb(100%,0%,0%);fill-opacity:1;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 356.882812 268.320312 C 356.882812 273.839844 352.40625 278.320312 346.882812 278.320312 C 341.359375 278.320312 336.882812 273.839844 336.882812 268.320312 C 336.882812 262.796875 341.359375 258.320312 346.882812 258.320312 C 352.40625 258.320312 356.882812 262.796875 356.882812 268.320312 \"/>\n<path style=\"fill-rule:nonzero;fill:rgb(100%,0%,0%);fill-opacity:1;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 273.953125 20 C 273.953125 25.523438 269.476562 30 263.953125 30 C 258.433594 30 253.953125 25.523438 253.953125 20 C 253.953125 14.476562 258.433594 10 263.953125 10 C 269.476562 10 273.953125 14.476562 273.953125 20 \"/>\n<path style=\"fill-rule:nonzero;fill:rgb(100%,0%,0%);fill-opacity:1;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 30 181.960938 C 30 187.484375 25.523438 191.960938 20 191.960938 C 14.476562 191.960938 10 187.484375 10 181.960938 C 10 176.441406 14.476562 171.960938 20 171.960938 C 25.523438 171.960938 30 176.441406 30 181.960938 \"/>\n</g>\n</svg>\n"
+            "image/svg+xml": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"600pt\" height=\"600pt\" viewBox=\"0 0 600 600\" version=\"1.1\">\n<g id=\"surface68\">\n<rect x=\"0\" y=\"0\" width=\"600\" height=\"600\" style=\"fill:rgb(100%,100%,100%);fill-opacity:1;stroke:none;\"/>\n<path style=\"fill:none;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(26.666667%,26.666667%,26.666667%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 580 418.035156 L 336.042969 580 \"/>\n<path style=\"fill:none;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(26.666667%,26.666667%,26.666667%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 580 418.035156 L 253.113281 331.679688 \"/>\n<path style=\"fill:none;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(26.666667%,26.666667%,26.666667%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 580 418.035156 L 572.925781 118.550781 \"/>\n<path style=\"fill:none;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(26.666667%,26.666667%,26.666667%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 336.042969 580 L 27.070312 481.449219 \"/>\n<path style=\"fill:none;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(26.666667%,26.666667%,26.666667%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 336.042969 580 L 346.882812 268.320312 \"/>\n<path style=\"fill:none;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(26.666667%,26.666667%,26.666667%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 253.113281 331.679688 L 27.070312 481.449219 \"/>\n<path style=\"fill:none;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(26.666667%,26.666667%,26.666667%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 253.113281 331.679688 L 263.953125 20 \"/>\n<path style=\"fill:none;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(26.666667%,26.666667%,26.666667%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 27.070312 481.449219 L 20 181.960938 \"/>\n<path style=\"fill:none;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(26.666667%,26.666667%,26.666667%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 572.925781 118.550781 L 346.882812 268.320312 \"/>\n<path style=\"fill:none;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(26.666667%,26.666667%,26.666667%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 572.925781 118.550781 L 263.953125 20 \"/>\n<path style=\"fill:none;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(26.666667%,26.666667%,26.666667%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 346.882812 268.320312 L 20 181.960938 \"/>\n<path style=\"fill:none;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(26.666667%,26.666667%,26.666667%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 263.953125 20 L 20 181.960938 \"/>\n<path style=\"fill-rule:nonzero;fill:rgb(100%,0%,0%);fill-opacity:1;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 590 418.035156 C 590 423.558594 585.523438 428.035156 580 428.035156 C 574.476562 428.035156 570 423.558594 570 418.035156 C 570 412.511719 574.476562 408.035156 580 408.035156 C 585.523438 408.035156 590 412.511719 590 418.035156 \"/>\n<path style=\"fill-rule:nonzero;fill:rgb(100%,0%,0%);fill-opacity:1;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 346.042969 580 C 346.042969 585.523438 341.566406 590 336.042969 590 C 330.519531 590 326.042969 585.523438 326.042969 580 C 326.042969 574.476562 330.519531 570 336.042969 570 C 341.566406 570 346.042969 574.476562 346.042969 580 \"/>\n<path style=\"fill-rule:nonzero;fill:rgb(100%,0%,0%);fill-opacity:1;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 263.113281 331.679688 C 263.113281 337.203125 258.636719 341.679688 253.113281 341.679688 C 247.59375 341.679688 243.113281 337.203125 243.113281 331.679688 C 243.113281 326.15625 247.59375 321.679688 253.113281 321.679688 C 258.636719 321.679688 263.113281 326.15625 263.113281 331.679688 \"/>\n<path style=\"fill-rule:nonzero;fill:rgb(100%,0%,0%);fill-opacity:1;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 37.070312 481.449219 C 37.070312 486.96875 32.59375 491.449219 27.070312 491.449219 C 21.546875 491.449219 17.070312 486.96875 17.070312 481.449219 C 17.070312 475.925781 21.546875 471.449219 27.070312 471.449219 C 32.59375 471.449219 37.070312 475.925781 37.070312 481.449219 \"/>\n<path style=\"fill-rule:nonzero;fill:rgb(100%,0%,0%);fill-opacity:1;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 582.925781 118.550781 C 582.925781 124.074219 578.449219 128.550781 572.925781 128.550781 C 567.402344 128.550781 562.925781 124.074219 562.925781 118.550781 C 562.925781 113.027344 567.402344 108.550781 572.925781 108.550781 C 578.449219 108.550781 582.925781 113.027344 582.925781 118.550781 \"/>\n<path style=\"fill-rule:nonzero;fill:rgb(100%,0%,0%);fill-opacity:1;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 356.882812 268.320312 C 356.882812 273.839844 352.40625 278.320312 346.882812 278.320312 C 341.359375 278.320312 336.882812 273.839844 336.882812 268.320312 C 336.882812 262.796875 341.359375 258.320312 346.882812 258.320312 C 352.40625 258.320312 356.882812 262.796875 356.882812 268.320312 \"/>\n<path style=\"fill-rule:nonzero;fill:rgb(100%,0%,0%);fill-opacity:1;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 273.953125 20 C 273.953125 25.523438 269.476562 30 263.953125 30 C 258.433594 30 253.953125 25.523438 253.953125 20 C 253.953125 14.476562 258.433594 10 263.953125 10 C 269.476562 10 273.953125 14.476562 273.953125 20 \"/>\n<path style=\"fill-rule:nonzero;fill:rgb(100%,0%,0%);fill-opacity:1;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 30 181.960938 C 30 187.484375 25.523438 191.960938 20 191.960938 C 14.476562 191.960938 10 187.484375 10 181.960938 C 10 176.441406 14.476562 171.960938 20 171.960938 C 25.523438 171.960938 30 176.441406 30 181.960938 \"/>\n</g>\n</svg>\n"
           },
           "metadata": {
             "tags": [],
@@ -188,7 +186,7 @@
               "isolated": true
             }
           },
-          "execution_count": 5
+          "execution_count": 30
         }
       ]
     },
@@ -784,40 +782,59 @@
       "cell_type": "code",
       "metadata": {
         "id": "-pyOyuy2WKrT",
-        "outputId": "7b1a6d79-d2f0-4259-ba64-6f7619c3f393",
+        "outputId": "0717b93b-5935-4292-c719-073c0767acc2",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 55
+          "height": 359
         }
       },
       "source": [
-        "a = vertices.MatrizAdj()\n",
-        "b = vertices.GrauSec()\n",
-        "c = vertices.HistGrau()\n",
-        "d = vertices.Diametro()\n",
+        "a = grafo.get_adjacency()\n",
+        "b = grafo.vs.degree()\n",
+        "c = grafo.degree_distribution()\n",
+        "d = grafo.diameter()\n",
         "\n",
         "print(\"Matriz de Adjacencia\")\n",
         "print(a)\n",
+        "\n",
+        "print(\"------\")\n",
         "print(\"Sequencia de Graus\")\n",
         "print(b)\n",
+        "\n",
+        "print(\"------\")\n",
         "print(\"Histograma de Graus\")\n",
         "print(c)\n",
+        "\n",
+        "print(\"------\")\n",
         "print(\"Diametro\")\n",
         "print(d)"
       ],
-      "execution_count": 24,
+      "execution_count": 26,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "Matrix([[0, 1, 1, 0, 1, 0, 0, 0], [1, 0, 0, 1, 0, 1, 0, 0], [1, 0, 0, 1, 0, 0, 1, 0], [0, 1, 1, 0, 0, 0, 0, 1], [1, 0, 0, 0, 0, 1, 1, 0], [0, 1, 0, 0, 1, 0, 0, 1], [0, 0, 1, 0, 1, 0, 0, 1], [0, 0, 0, 1, 0, 1, 1, 0]])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 24
+          "output_type": "stream",
+          "text": [
+            "Matriz de Adjacencia\n",
+            "[[0, 1, 1, 0, 1, 0, 0, 0]\n",
+            " [1, 0, 0, 1, 0, 1, 0, 0]\n",
+            " [1, 0, 0, 1, 0, 0, 1, 0]\n",
+            " [0, 1, 1, 0, 0, 0, 0, 1]\n",
+            " [1, 0, 0, 0, 0, 1, 1, 0]\n",
+            " [0, 1, 0, 0, 1, 0, 0, 1]\n",
+            " [0, 0, 1, 0, 1, 0, 0, 1]\n",
+            " [0, 0, 0, 1, 0, 1, 1, 0]]\n",
+            "------\n",
+            "Sequencia de Graus\n",
+            "[3, 3, 3, 3, 3, 3, 3, 3]\n",
+            "------\n",
+            "Histograma de Graus\n",
+            "N = 8, mean +- sd: 3.0000 +- 0.0000\n",
+            "[3, 4): ******** (8)\n",
+            "------\n",
+            "Diametro\n",
+            "3\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
